
2006-01-24 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* PDF/MRST.cc: Restructured for speed, high-x problem unchanged
	
2006-01-23  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Analysis/*: Added more simple analysis handlers for multiplicity
	checking and general consistency.

	* src/Hadronization.in: reset s-quark weight to 1.0

	* PDF/MRST.cc: Added GeV2 to fix wrong PDF behaviour
	
2006-01-23  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Added basic analysis handlers

2006-01-06  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Various changes to get the forced splitting to work
	
	* Shower/Makefile.am (Repository): Change to Makefile due to move of SudakovFormFactor to SplittingFunctions directory

2005-12-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Shower/ForwardEvolver.cc (Repository): SplttingFunctions and related classes cleaned up and moved to new directory 

2005-12-18 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* Shower/SudakovFormFactor.cc: Veto bugs fixed
	
	* Shower/KinematicsReconstructor.cc, Shower/BackwardEvolver.cc:
	wrapped forced splittings in '#ifdef PHILSCODE', to make Shower
	testing work (also in PDF/BaryonRemnants.cc)

	* Shower/SplittingGenerator.cc: small change, wrapped some 'cout'
	in a DEBUG_LEVEL test

	* Hadronization/ClusterHadronizationHandler.cc: added missing
	Remnant code

	* src/Shower.in: typo c->c,cbar fixed to g->c,cbar; cleaned up
	arrangement 

2005-12-17 David Grellscheid <David.Grellscheid@durham.ac.uk>

	* Shower/*, src/*.in ( and others ): Full merge of Stefan's Shower
	changes, Phil's refactoring of forced splitting, Peter's Remnant
	class and Durham bugfixes. NOT tested yet.

	* PDF/BaryonRemnants.cc: Remnant and forced splitting don't work
	together so far. File contains #defines to choose version. This
	must be resolved! NOT tested yet. 

2005-10-25  Martyn Gigg  <dph3mag@d31.phyip3.dur.ac.uk>
